<resources>
    <string name="app_name"></string>
    <string name="stats">Stats</string>
    <string name="messages">Messages</string>
    <string name="remove_products">Remove products</string>
    <string name="add_products">Add Products</string>
    <string name="logout">Logout</string>
    <string name="type_additional_description_here">type_additional_description_here</string>
    <string name="item_description">item_description</string>
    <string name="item_title">item_title</string>
    <string name="item_name">Item name</string>
    <string name="description_of_item">Description of item</string>
    <string name="universities">Universities</string>
    <string name="ariel">Ariel</string>
    <string name="tel_aviv">TEL-AVIV</string>
    <string name="ben_gurion">BEN-GURION</string>
    <string name="technion">Technion</string>
    <string name="posts">Posts</string>
    <string name="search_posts">Search posts</string>
    <string name="post_title">Post title</string>
    <string name="phone_number">Phone number</string>
    <string name="add_description">Add description</string>
    <string name="text">Text</string>
    <string name="add_image">Add Image</string>
    <string name="add_url_text">Add URL text</string>
    <string name="delete_note">Delete Note</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="reichman">REICHMAN</string>
    <string name="haifa">HAIFA</string>
    <string name="ariel_university_posts">Ariel University Posts</string>
    <string name="ben_gurion_universities_posts">Ben Gurion Universities Posts</string>
    <string name="Hifa_universities_posts">Hifa universities posts</string>
    <string name="reichman_universities_posts">reichman universities posts</string>
    <string name="Technion_universities_posts">Technion universities posts</string>
    <string name="TLV_universities_posts">TLV universities posts</string>
    <string name="enter_your_post_content_here">Enter your post content here</string>
    <string name="title_displayed_here">Title Displayed Here</string>
    <string name="bgu_posts">BGU Posts</string>
    <string name="haifa_university_posts">Haifa University Posts</string>
    <string name="reichman_university_posts">Reichman University Posts</string>
    <string name="technion_posts">Technion Posts</string>
    <string name="tlv_university_posts">TLV University Posts</string>
    <string name="hebrew">HEBREW</string>
    <string name="information">Information</string>
    <string name="this_application_is_built_for_students_and_intended_for_uploading_products_that_you_wish_donate_to_a_student">This application is built for STUDENTS and intended for uploading products that you wish donate to a student</string>
    <string name="previous">Previous</string>
    <string name="author_name">Author name</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="postOwner">postowner</string>
    <string name="post_data">Post data</string>
    <string name="Institution">institution</string>
    <string name="search_post">Search</string>
    <string name="search_results">Search results</string>
    <string name="enter_institution_optional">Enter institution (optional)</string>
    <string name="enter_product_description">Enter product description</string>
</resources>