<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UniversitiesActivity"
    android:background="@drawable/background_post"
    android:backgroundTint="@color/colorPrimaryDark_1"
    android:orientation="vertical">
    <!--    android:background="@color/colorPrimary_1"-->
<!--    <RelativeLayout-->
<!--        android:id="@+id/relativeLayout"-->
<!--        android:layout_width="358dp"-->
<!--        android:layout_height="102dp"-->
<!--        android:layout_marginEnd="4dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0">-->



<!--    </RelativeLayout>-->

    <TextView
        android:id="@+id/UniversitiesView"
        android:layout_width="351dp"
        android:layout_height="104dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-1dp"
        android:fontFamily="@font/ubuntu_bold"
        android:padding="30dp"
        android:text="@string/universities"
        android:textAllCaps="true"
        android:textColor="@color/colorNoteColor5"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ariel_uni"
        android:layout_width="130dp"
        android:layout_height="84dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:onClick="UniversitiesBoard"
        android:padding="30dp"
        android:text="@string/ariel"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_back"
        android:background="@drawable/corners"/>

    <Button
        android:id="@+id/tel_aviv_uni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="UniversitiesBoard"
        android:padding="30dp"
        android:text="@string/tel_aviv"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ariel_uni"
        android:background="@drawable/corners"/>

    <Button
        android:id="@+id/ben_gurion_uni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:onClick="UniversitiesBoard"
        android:padding="30dp"
        android:text="@string/ben_gurion"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tel_aviv_uni"
        android:background="@drawable/corners"/>

    <Button
        android:id="@+id/hebrew_uni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:onClick="UniversitiesBoard"
        android:padding="30dp"
        android:text="@string/hebrew"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ben_gurion_uni"
        android:background="@drawable/corners"/>

    <Button
        android:id="@+id/technion_uni"
        android:layout_width="167dp"
        android:layout_height="87dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="24dp"
        android:onClick="UniversitiesBoard"
        android:padding="30dp"
        android:text="@string/technion"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ariel_uni"
        android:background="@drawable/corners"/>

    <Button
        android:id="@+id/reichman_uni"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:layout_marginTop="16dp"
        android:onClick="UniversitiesBoard"
        android:padding="30dp"
        android:text="@string/reichman"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_back"
        android:background="@drawable/corners"/>

    <Button
        android:id="@+id/haifa_uni"
        android:layout_width="156dp"
        android:layout_height="84dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="28dp"
        android:onClick="UniversitiesBoard"
        android:padding="30dp"
        android:text="@string/haifa"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tel_aviv_uni"
        android:background="@drawable/corners"/>

    <Button
        android:id="@+id/go_back"
        android:layout_width="74dp"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"

        android:background="@drawable/ic_back"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>



