<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".postDetails"
    android:background="@color/colorPrimaryDark_1">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarofnotedetail"
        android:layout_width="399dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="12dp">

        <TextView
            android:id="@+id/titleofnotedetail"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/corners"
            android:backgroundTint="@color/colorDefaultNoteColor"
            android:fontFamily="@font/ubuntu_bold"
            android:paddingTop="12dp"
            android:text="@string/title_displayed_here"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/author"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="81dp"
        android:backgroundTint="@color/colorDefaultNoteColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/authorNamePostDetail"
                android:layout_width="100dp"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="1dp"
                android:layout_toStartOf="@+id/phoneofnotedetail"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/author_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneofnotedetail"
                android:layout_width="112dp"
                android:layout_height="32dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="108dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/phone_number"
                android:textSize="@dimen/_11ssp" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/contentofnotedetail"
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:layout_below="@+id/author"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/corners"
        android:backgroundTint="@color/colorDefaultNoteColor"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="top|left"
        android:hint="@string/enter_your_post_content_here"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp">

    </TextView>

    <ImageView
        android:id="@+id/back_button_postdetails"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        app:srcCompat="@drawable/ic_back"
        android:onClick="backArrow"/>

    <ImageView
        android:id="@+id/menupopbutton"
        android:layout_width="38dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="313dp"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="-1dp"
        android:layout_toEndOf="@+id/back_button_postdetails"
        android:layout_weight="0"
        android:src="@drawable/ic_baseline_more_vert_24" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/_5sdp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="119dp"
        app:srcCompat="@drawable/background_subtitle_idicator" />

    <ImageView
        android:id="@+id/sendMessagePostDetail"
        android:layout_width="58dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="328dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="2dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageView
        android:id="@+id/likeBtn"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="283dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="4dp"
        app:srcCompat="@drawable/ic_like" />

    <!--        android:onClick="function name in post details"-->



</com.google.android.material.circularreveal.CircularRevealRelativeLayout>